@@ -33,6 +33,7 @@ S3method(perryTuning,"function")
 S3method(perryTuning,call)
 S3method(plot,perry)
 S3method(plot,perrySelect)
+S3method(predict,perryTuning)
 S3method(print,bootSamples)
 S3method(print,cvFolds)
 S3method(print,perry)
